aplicaçao da img do menu/notifi

--- a/estilo.css
+++ b/estilo.css
@@ -88,3 +88,17 @@ a {
 #img{
     text-align: center;
 }
+
+#menu{
+    width: 50px;
+    position: absolute;
+    left: 2%;
+}
+
+#sino{
+    width: 50px;
+    mask-position: absolute;
+    left: 95%;
+}
+
+
