--- a/estilo.css
+++ b/estilo.css
@@ -78,15 +78,17 @@ a {
     text-align: center;
     width: 400px;
     border-radius: 8px;
-    margin-bottom:10px ;
+    margin-bottom:5px ;
 }
 
 #op_login{
     text-align: center;
 }
 
-#img{
-    text-align: center;
+img{
+  width: 400px;
+  display: block;
+  margin: 10px auto;
 }
 
 #menu{
@@ -97,7 +99,7 @@ a {
 
 #sino{
     width: 50px;
-    mask-position: absolute;
+    position: absolute;
     left: 95%;
 }
 
